@@ -7,9 +7,10 @@ install-meta (0.0.43) UNRELEASED; urgency=low
   * compiler warning shut up
   * category text is now bold
   * bugfix for bold category text
-  * new icons for category 
+  * new icons for category
+  * source packages.d bugfix for info window
 
- -- Horst Tritremmel <hjt@sidux.com>  Tue,  6 Mar 2007 12:19:09 +0100
+ -- Horst Tritremmel <hjt@sidux.com>  Tue,  6 Mar 2007 12:43:03 +0100
 
 install-meta (0.0.42) unstable; urgency=low
 
